# XManga

./: Archive.cpp  Archive.hpp  BookmarkDialog.cpp  BookmarkDialog.hpp  BookmarkDialog.ui  CMakeLists.txt  MainWindow.ui  MouseGestureConfigDialog.cpp  MouseGestureConfigDialog.hpp  MouseGestureConfigDialog.ui  PageView.cpp  PageView.hpp  Settings.hpp  Singleton.hpp  ThumbnailView.cpp  ThumbnailView.hpp  XManga.cpp  XManga.hpp  main.cpp  readme.md
blitz/: LICENSE  blitz.h  scalefilter.cpp
qactionmanager/: keyconfigdialog.ui  qactionmanager.h
